<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.marissagift.studycase.MainActivity">

    <TextView
        android:id="@+id/text_header"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/header"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_headeer"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginBottom="35dp"
        android:layout_marginTop="5dp"
        android:text="@string/sama_milea"
        android:textSize="17sp"
        tools:text="Sama Milea" />

    <EditText
        android:id="@+id/menu_makan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginHorizontal="17dp"
        android:ems="10"
        android:hint="@string/menu_makanan"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="129dp" />

    <EditText
        android:id="@+id/porsi_makan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="37dp"
        android:layout_marginHorizontal="17dp"
        android:ems="10"
        android:hint="@string/porsi_makanan"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="214dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/button_eatbus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:layout_marginStart="17dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:onClick="launchEatbus"
            android:text="@string/btn_eatbus"
            android:textColor="#FFF"
            tools:layout_editor_absoluteX="32dp"
            tools:layout_editor_absoluteY="305dp" />

        <Button
            android:id="@+id/button_abnormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:onClick="launchAbnormal"
            android:text="@string/btn_abnormal"
            android:textColor="#FFF" />
    </LinearLayout>

</LinearLayout>
